// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should add shadow and gutters 1`] = `
.c0 {
  position: relative;
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  padding: 16px;
}

@media screen and (min-width:480px) {
  .c0 {
    padding: 16px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 24px;
    padding-bottom: 16px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    padding: 32px;
    padding-bottom: 16px;
  }
}

<div
  className="c0"
/>
`;

exports[`<ActionBar /> should omit shadow and gutters 1`] = `
.c0 {
  position: relative;
  box-shadow: none;
}

<div
  className="c0"
/>
`;

exports[`<BottomActionBar /> should add shadow and gutters 1`] = `
.c0 {
  position: relative;
  box-shadow: 0 16px 16px 0 rgba(0,0,0,0.06),0 0 16px 0 rgba(0,0,0,0.12);
  padding: 16px;
}

@media screen and (min-width:480px) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:768px) {
  .c0 {
    padding: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c0 {
    padding: 32px;
    padding-top: 24px;
  }
}

<div
  className="c0"
/>
`;

exports[`<BottomActionBar /> should omit shadow and gutters 1`] = `
.c0 {
  position: relative;
  box-shadow: none;
}

<div
  className="c0"
/>
`;
